--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "chart.js": "^4.5.1",
     "firebase": "^12.9.0",
-    "next": "15.5.4",
+    "next": "^16.1.6",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.1.0",
